syntax = "proto3";

package account;

message AccountRequest {
    string id = 1;
    string customer_id = 2;
    string supabase_id = 3;
    string profile_url = 4;
    string status = 5;
    string username = 6;
    string birthday = 7;
    string metadata = 8;
}

message AccountResponse {
    string id = 1;
    string customer_id = 2;
    string supabase_id = 3;
    string profile_url = 4;
    string status = 5;
    string update_at = 6;
    string username = 7;
    string birthday = 8;
    string metadata = 9;
}

message AccountsRequest {
    repeated string account_ids = 1;
}

message AccountsResponse {
    repeated account.AccountResponse accounts = 1;
}

message AccountExistsRequest {
    string username = 1;
}

message AccountExistsResponse {
    bool exists = 1;
}

message AccountLikeRequest {
    string query_username = 1;
    string account_id = 2;
    int32 offset = 3;
    int32 limit = 4;
}

message AccountPresenceRequest {
    repeated string account_ids = 1;
}

message AccountPresenceResponse {
    string account_id = 1;
    string last_seen = 2;
    bool is_online = 3;
}

message AccountPresencesResponse {
    repeated AccountPresenceResponse account_presences = 1;
}